--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@samalapsy/vue-onepipejs-checkout",
+  "name": "vue-onepipejs-checkout",
   "version": "0.1.0",
   "author": "Samuel O. Alapakristi",
   "private": false,
-  "main" : "./dist/vue-onepipejs-checkout.common.js",
-  "files" : [
+  "main": "./dist/vue-onepipejs-checkout.common.js",
+  "files": [
     "dist/*",
     "src/*",
     "public/*",
@@ -14,7 +14,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-lib": "vue-cli-service build --target lib --name vue-onepipejs-checkout ./src/components/index.js" ,
+    "build-lib": "vue-cli-service build --target lib --name vue-onepipejs-checkout ./src/components/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
